--- a/resonate.tex
+++ b/resonate.tex
@@ -1,4 +1,4 @@
-\documentclass[preprint]{elsarticle}
+\documentclass[preprint,times]{elsarticle}
 %\usepackage{times}
 \usepackage{url}
 %\usepackage{authblk}
@@ -13,6 +13,7 @@
 \newtheorem{definition}{Definition}
 \newtheorem{hypothesis}{hypothesis}
 \newtheorem{theorem}{Theorem}
+
 \begin{document}
 \title{Resonation Elicits Retweet: Modeling Subjectivity For Retweet Analysis}
 
@@ -503,6 +504,6 @@ We demonstrate the effectiveness of the proposed model with retweet analysis pro
 Our future work mainly lies in two directions.
 Firstly, our subjective model is established in a simple way, and it is an interesting direction to establish it under the framework of generative topic-sentiment model, which has been applied in reviews and citation network.
 Secondly, we will apply subjective model to other social media analysis task such as connection prediction and friend recommendation.
-\bibliographystyle{abbrv}
+\bibliographystyle{elsarticle-num-names}
 \bibliography{resonate_tweet}
 \end{document}
