--- a/resonate.tex
+++ b/resonate.tex
@@ -1,4 +1,4 @@
-\documentclass[preprint,times]{elsarticle}
+\documentclass[preprint,authoryear,12pt,times]{elsarticle}
 %\usepackage{times}
 \usepackage{url}
 %\usepackage{authblk}
@@ -13,8 +13,13 @@
 \newtheorem{definition}{Definition}
 \newtheorem{hypothesis}{hypothesis}
 \newtheorem{theorem}{Theorem}
+\setlength\parindent{0pt}
+
+\journal{Neural Networks}
 
 \begin{document}
+
+\begin{frontmatter}
 \title{Resonation Elicits Retweet: Modeling Subjectivity For Retweet Analysis}
 
 \author[rvf]{SongXian Xie\corref{cor1}\fnref{fn1}}
@@ -36,32 +41,33 @@ We evaluate our model in the retweet analysis problem to verify its influence on
 \begin{keyword}
 Twitter \sep LDA \sep sentiment analysis \sep retweet \sep subjectivity
 \end{keyword}
-\maketitle
+\end{frontmatter}
+%\maketitle
 \section{Introduction}
 \label{introduction}
 Twitter is well-known for its freedom of publishing short message(i.e. tweet) within a limited length of 140 characters, and viral spreading of information across complex social networks.
 Since launched in March 2006, the service rapidly has gained worldwide popularity, with over 500 million registered users at the end of year 2012, who have generated over 340 million tweets per day\footnote{\url{http://en.wikipedia.org/wiki/Twitter}}.
 Beyond the large collection of user-generated content, Twitter provides its social network functions for connection, communication, and information diffusion by allowing users to message one another directly and follow one another publicly. 
-The complex networks and large content volume of Twitter provide researchers with insights into people’s social behavior on a scale that has never been possible\cite{DBLP:conf/hicss/StieglitzD12}.\\
+The complex networks and large content volume of Twitter provide researchers with insights into people’s social behavior on a scale that has never been possible\citep{DBLP:conf/hicss/StieglitzD12}.\\
 Information diffusion is a lasting research for social scientists who might want to study the problem on Twitter because an established convention of Twitter facilitates information diffusion. 
-Despite the restricted length of tweets, retweet convention and complex networks of Twitter provide an unprecedented mechanism for the spread of information\cite{Jenders:2013APV}. 
-In fact almost a quarter of the tweets published by users are retweeted from others\cite{conf/cikm/YangGCTLZS10}. 
+Despite the restricted length of tweets, retweet convention and complex networks of Twitter provide an unprecedented mechanism for the spread of information\citep{Jenders:2013APV}. 
+In fact almost a quarter of the tweets published by users are retweeted from others\citep{conf/cikm/YangGCTLZS10}. 
 Therefore, it is important to make it clear how retweet works in order to understand how information is diffused on Twitter. 
 This paper focuses specifically on how information spreads on Twitter by exploring underlying reasons why a user retweet a particular tweet out of the overwhelming message flow.\\ 
-Several studies on retweet have concentrated on analyzing retweet habits and influencing factors\cite{Boyd2010,Kwak:2010TSN,Suh2010}, most of which are generic, not user oriented.
+Several studies on retweet have concentrated on analyzing retweet habits and influencing factors\citep{Boyd2010,Kwak:2010TSN,Suh2010}, most of which are generic, not user oriented.
 From the point of users, the practice of retweet includes reading the tweet, deciding whether it is worthwhile to share, and then acting on it, hence retweet behavior indicates that the user considers the tweet containing information interesting to him.
 Therefore modeling users provides an important perspective for retweet behavior analysis.
-Studies on the retweet behaviors of users have shown that an enriched user model gives coherent and consistent explanation for retweet behavior\cite{Abel:2011AUM,conf/icwsm/MacskassyM11,conf/wsdm/FengW13}. 
+Studies on the retweet behaviors of users have shown that an enriched user model gives coherent and consistent explanation for retweet behavior\citep{Abel:2011AUM,conf/icwsm/MacskassyM11,conf/wsdm/FengW13}. 
 Until now, researchers have tried to model users from four types of information to characterize a Twitter user:
 profile features(“\textbf{Who you are}”), tweeting behavior(“\textbf{How you tweet}”), linguistic content(“\textbf{What you tweet}”), 
-and social network(“\textbf{Who you tweet}”)\cite{Pennacchiotti:icwsm11}. 
-Despite demographic profile, tweeting habits and network connections might determine source and scope of information users could be exposed to, topics of interest of users encapsulated in rich linguistic content have been proved consistently valuable for retweet bahavior explanation\cite{conf/icwsm/MacskassyM11}.\\
+and social network(“\textbf{Who you tweet}”)\citep{Pennacchiotti:icwsm11}. 
+Despite demographic profile, tweeting habits and network connections might determine source and scope of information users could be exposed to, topics of interest of users encapsulated in rich linguistic content have been proved consistently valuable for retweet bahavior explanation\citep{conf/icwsm/MacskassyM11}.\\
 Beyond merely publishing news and reports, Twitter is becoming a large platform where different opinions are presented and exchanged by allowing users comment, discuss, compliment, argue and complain over topics they are interested in freely. 
-Studies have demonstrated that user-generated content with rich sentiment information can trigger more attention, feedback or participation\cite{DBLP:conf/hicss/StieglitzD12}, and tweets with high emotional diversity have a better chance of being retweeted\cite{conf/icwsm/PfitznerGS12}.
+Studies have demonstrated that user-generated content with rich sentiment information can trigger more attention, feedback or participation\citep{DBLP:conf/hicss/StieglitzD12}, and tweets with high emotional diversity have a better chance of being retweeted\citep{conf/icwsm/PfitznerGS12}.
 However, users receive thousands of tweets about different topics every day, which one will be retweeted depends on the subjective choice of users.
 Philosophically, subjective initiative nature of human determines that the pattern of behavior is subjectivity driven.
-Psychological researchers have identified subjectivity as the underlying factor that influence the decision-making about taking what activities to process incoming stimuli\cite{Moore2008}.
-According to theory of Biased Assimilation, bias is an inherent feature of human subjectivity, and bias is a consistent, robust characteristic of behavior, so people are prone to choose and diffuse information according to their own biased subjectivity\cite{Hyman2000,sunstein2009rumors}.
+Psychological researchers have identified subjectivity as the underlying factor that influence the decision-making about taking what activities to process incoming stimuli\citep{Moore2008}.
+According to theory of Biased Assimilation, bias is an inherent feature of human subjectivity, and bias is a consistent, robust characteristic of behavior, so people are prone to choose and diffuse information according to their own biased subjectivity\citep{Hyman2000,sunstein2009rumors}.
 It can be inferred from above explanation that users are prone to diffuse a tweet that can raise resonation with their biased subjectivities.
 On Twitter, subjectivity may be represented as topics and opinions articulated in the information generated by users.  
 Inspired by this observation, we explore the linguistic information of Twitter to model the subjective tweets and users, and investigate how the subjective model could benefit the retweet behavior analysis.\\
@@ -83,33 +89,34 @@ The rest of the paper is organized as follows: Section 2 gives related work to o
 In this section, we give an introduction to three lines of relevant research work: $ 1) $ retweet behavior analysis, $ 2) $ user profile and user modeling, and $  3)$ sentiment analysis. 
 \subsection{Retweet behavior analysis}
 A large body of studies have analyzed characteristics of of retweet, examining factors that lead to increased retweetability and designing models to predict the probability of being retweeted. 
-As for factors influencing retweetability, Suh et al.\cite{Suh2010} found that tweets with URLs and hashtags were more likely to be retweeted, and there was a strong linear relationship between the number of followers and the likelihood that the tweet be retweeted. 
-Macskassy and Michelson\cite{conf/icwsm/MacskassyM11} studied a set of Twitter users over a period of a month and sought to explain the individual rewteet behaviors.
+As for factors influencing retweetability, \citet{Suh2010} found that tweets with URLs and hashtags were more likely to be retweeted, and there was a strong linear relationship between the number of followers and the likelihood that the tweet be retweeted. 
+\citet{conf/icwsm/MacskassyM11} studied a set of Twitter users over a period of a month and sought to explain the individual rewteet behaviors.
 They found that models derived from tweets content could explain most of retweet behaviors.
-Comarela et al.\cite{Comarela:2012UFA} found previous response to the tweeter, the tweeters’ sending rate, the freshness of information, the length of tweet could affect followers’ response to retweet. Starbird and Palen\cite{Starbird:2012RRI} addressed specifically the retweet mechanism during crises. 
+\citet{Comarela:2012UFA} found previous response to the tweeter, the tweeters’ sending rate, the freshness of information, the length of tweet could affect followers’ response to retweet. 
+\citet{Starbird:2012RRI} addressed specifically the retweet mechanism during crises. 
 They found that tweets with topical keywords were more likely to be retweeted. 
 There are also works extending the analysis to build retweet prediction model. 
-Yang et al.\cite{conf/cikm/YangGCTLZS10} designed features from factors that influence the retweet behavior and built a semi-supervised framework on a factor graph model to predict users’ retweet behaviors. 
-Petrovic et al.\cite{Osborne_Lavrenko_2011} introduced features such as novelty of a tweet and the number of times the author is listed to train a model with a passive aggressive algorithm. 
+\citet{conf/cikm/YangGCTLZS10} designed features from factors that influence the retweet behavior and built a semi-supervised framework on a factor graph model to predict users’ retweet behaviors. 
+\citet{Osborne_Lavrenko_2011} introduced features such as novelty of a tweet and the number of times the author is listed to train a model with a passive aggressive algorithm. 
 They found the dominance of social features, while tweet features added a substantial boost to the performance.
-Jenders et al.\cite{Jenders:2013APV} analyzed the “obvious” and “latent” features from structural, content-based, and sentimental aspects of both tweet and users, with respect to their impact on the spread of tweets. 
+\citet{Jenders:2013APV} analyzed the “obvious” and “latent” features from structural, content-based, and sentimental aspects of both tweet and users, with respect to their impact on the spread of tweets. 
 They found a combination of features covering all aspects was the key to high prediction quality.
-Naveed et al.\cite{Naveed:2011SMC,2011:NaveedGKC} introduced interestingness as static quality measure to capture the static content quality of tweets, and quantified it based on such features as Emoticons, sentiments and topics a tweet contains, then trained a logistic regression model to predict the probability of retweet for an individual tweet .
-Feng and Wang\cite{conf/wsdm/FengW13} built a graph made up of users, publishers and tweets nodes with all sources of information incorporating into nodes and edges, and proposed a feature-aware factorization model to re-rank the tweets according to their probability of being retweeted.
-Pfitzner et al.\cite{conf/icwsm/PfitznerGS12} proposed a new measure called emotional divergence to evaluate the retweet probability of a tweet and showed that highly emotional diverse tweets can have up to almost five times higher chances of being retweeted.
+\citet{Naveed:2011SMC,2011:NaveedGKC} introduced interestingness as static quality measure to capture the static content quality of tweets, and quantified it based on such features as Emoticons, sentiments and topics a tweet contains, then trained a logistic regression model to predict the probability of retweet for an individual tweet .
+\citet{conf/wsdm/FengW13} built a graph made up of users, publishers and tweets nodes with all sources of information incorporating into nodes and edges, and proposed a feature-aware factorization model to re-rank the tweets according to their probability of being retweeted.
+\citet{conf/icwsm/PfitznerGS12} proposed a new measure called emotional divergence to evaluate the retweet probability of a tweet and showed that highly emotional diverse tweets can have up to almost five times higher chances of being retweeted.
 From a global perspective, all papers listed above have tried to answer the question of ``Which tweets will be retweeted by anyone or not?''. 
 But they are weak to capture ``Whether a tweet is retweetable from a user-centric perspective considering the interests and opinions of users''. 
 In this paper, we will try to answer this question by building a subjective model which is capable of capturing both the interests and opinions of users.
 \subsection{User profile and user modeling}
 With the popularity of social media, researchers have begun to pay close attention to the massive amount of data generated by users, and put forwards several techniques to model users on the data, which provide researchers with insights into user online behaviors. 
-Hannon, et al.\cite{Hannon:2010} proposed that Twitter users can be modeled by the tweets and relationships of Twitter social network.
+\citet{Hannon:2010} proposed that Twitter users can be modeled by the tweets and relationships of Twitter social network.
 They found that social graph based approach could explore users who are ’near’ in the sense of follow relations, but failed to find users who are ’distant’, on the other hands, content-based approach could find similar users based on interests extracted from the content of tweets. 
-Macskassy and Michelson\cite{conf/icwsm/MacskassyM11} discover user’s topics of interest by leveraging Wikipedia as external knowledge to determine a common set of high-level categories that covers entities in tweets. 
-Ramage et al.\cite{RamageEtAl:10} made use of topic models to analyze Twitter content at large scale and at the level of individual users with 4S dimensions, showing improved performance on tasks such as post filtering and user recommendation. 
+\citet{conf/icwsm/MacskassyM11} discover user’s topics of interest by leveraging Wikipedia as external knowledge to determine a common set of high-level categories that covers entities in tweets. 
+\citet{RamageEtAl:10} made use of topic models to analyze Twitter content at large scale and at the level of individual users with 4S dimensions, showing improved performance on tasks such as post filtering and user recommendation. 
 These efforts about user modeling on Twitter have simply built model for each user by extracting key words, entities, categories or latent topics from tweet content. 
 Some researchers argued that user behavior could easily be affected by some external factors other than user interest.
-Xu et al.\cite{Xu:2012MUP} proposed a mixture model which incorporated three important factors, namely breaking news, friends’ time-line and user interest, to explain user posting behavior.
-Pennacchiotti et al.\cite{Pennacchiotti:icwsm11} proposed the most comprehensive method to model Twitter user for user classification. They focused on richer feature sets such as features derived from topic models, tweet sentiment analysis and explicit follower-followed links to exploit the user-created content. 
+\citet{Xu:2012MUP} proposed a mixture model which incorporated three important factors, namely breaking news, friends’ time-line and user interest, to explain user posting behavior.
+\citet{Pennacchiotti:icwsm11} proposed the most comprehensive method to model Twitter user for user classification. They focused on richer feature sets such as features derived from topic models, tweet sentiment analysis and explicit follower-followed links to exploit the user-created content. 
 Their work confirmed the value of in-depth features which reflect a deeper understanding of the Twitter user and the user network structure.\\
 Just as the Section~\ref{introduction} stated, previous researches have tried to model users from four types of information: profile features, tweeting behavior, linguistic content and social network. 
 Some studies perceive that the implicit features articulated in the user-generated content play an import role in user behavior analysises,  and they have proposed diverse techniques to capture such in-depth features to model user's interest. 
@@ -120,12 +127,12 @@ Motavited by the observation, we firstly put forward subjective model to combine
 Sentiment analysis has been a popular researching area for years, and previous research mainly focuses on reviews or news comments. 
 Generally, there are two major methods, i.e. rule-based approaches and machine learning approaches. 
 Recently, the sentiment analysis research has begun to pay more and more attention to social media such as Twitter because of the massive user-generated content and the unique characteristics which could be incoporated into sentiment analysis. 
-Hu et al.\cite{Hu:2013www} interpreted emotional signals available in social media data for unsupervised sentiment analysis by providing a unified way to model two main categories of emotional signals: emotion indication and emotion correlation. 
-Jiang et al.\cite{Jiang:2011TTS} focused on target-dependent Twitter sentiment classification, they proposed to improve target-dependent Twitter sentiment classification by taking target-dependent features and related tweets into consideration. 
-Asiaee T. et al.\cite{AsiaeeT:2012} presented a cascaded classifier framework for per-tweet sentiment analysis by extracting tweets about a desired target subject, separating tweets with sentiment, and setting apart positive from negative tweets.
-Hu et al.\cite{Hu:2013ESR} extracted sentiment relations between tweets based on social theories, and proposed a novel sociological approach to utilize sentiment relations between messages to facilitate sentiment classification and effectively handle noisy Twitter data.
-Motivated by sociological theories that humans tend to have consistently biased opinions, Guerra et al.\cite{CalaisGuerra:2011BOT} addressed challenges of topic-based real-time sentiment analysis by proposing a novel transfer learning approach with a suitable source task of opinion holder bias prediction.
-Thelwall et al.\cite{Thelwall:2010SSS,Thelwall:2012SSD} designed SentiStrength, an algorithm for extracting sentiment strength from informal English text with human-evaluated dictionaries for words connotated with positive or negative sentiment strength, which exploited the grammar and spelling styles in typical microblogs.
+\citet{Hu:2013www} interpreted emotional signals available in social media data for unsupervised sentiment analysis by providing a unified way to model two main categories of emotional signals: emotion indication and emotion correlation. 
+\citet{Jiang:2011TTS} focused on target-dependent Twitter sentiment classification, they proposed to improve target-dependent Twitter sentiment classification by taking target-dependent features and related tweets into consideration. 
+\citet{AsiaeeT:2012} presented a cascaded classifier framework for per-tweet sentiment analysis by extracting tweets about a desired target subject, separating tweets with sentiment, and setting apart positive from negative tweets.
+\citet{Hu:2013ESR} extracted sentiment relations between tweets based on social theories, and proposed a novel sociological approach to utilize sentiment relations between messages to facilitate sentiment classification and effectively handle noisy Twitter data.
+Motivated by sociological theories that humans tend to have consistently biased opinions, \citet{CalaisGuerra:2011BOT} addressed challenges of topic-based real-time sentiment analysis by proposing a novel transfer learning approach with a suitable source task of opinion holder bias prediction.
+\citet{Thelwall:2010SSS,Thelwall:2012SSD} designed SentiStrength, an algorithm for extracting sentiment strength from informal English text with human-evaluated dictionaries for words connotated with positive or negative sentiment strength, which exploited the grammar and spelling styles in typical microblogs.
 In this paper, we adopt SentiStrength for sentiment analysis to build our subjective model as a finer grain sentiment strength could give us more detailed opinion of users than binary polarized sentiment.
 \section{Subjective Model}
 \label{subjectivemodel}
@@ -136,7 +143,7 @@ Psychologically, the subjectivity of human is the underlying reason that drives 
 When a user browses a tweet in the message flow he has followed, the inner subjectivity defines his retweet choice for the tweet, which depends on whether the the topics and the opinions of the tweet could arouse resonation of the user.
 If the tweet is similar with the user in both topics and opinions, the user might have high probability to propagate it to his followers by taking retweet behavior. 
 The core problem lies in that how to model the subjectivity of the user and the tweet(we refer subjectivity of tweet as the topics it talks about and the opinions towards these topics it holds). 
-Subjectivity has been extensively studied by psychologists from different dimensions to characterize the personality of people based on such records as historic behaviors and remarks\cite{Engbert2007}, and linguists have defined the subjectivity of language as the speaker always shows their perspectives, attitudes and sentiments in the discourse\cite{stein2005subjectivity}. 
+Subjectivity has been extensively studied by psychologists from different dimensions to characterize the personality of people based on such records as historic behaviors and remarks\citep{Engbert2007}, and linguists have defined the subjectivity of language as the speaker always shows their perspectives, attitudes and sentiments in the discourse\citep{stein2005subjectivity}. 
 The user-generated content of social media provide massive language data that traditional collection methods can not achieve.
 With plenty of data available, we firstly propose and define subjective model on Twitter, and we declare that our definition can be easily be adapted for other social media platforms as well.
 \begin{definition}[Subjective Model For User]
@@ -163,7 +170,7 @@ P \left( c \right) = \lbrace \left( t_{i}, w_{c} \left( t_{i} \right), d_{c,t_{i
 \subsection{Retweet Problem Statement}
 \label{statement}
 Although subjective model might explain several behaviors of social media users, we are interested in retweet behavior in this paper, and apply subjective model to understanding underlying mechanism of information diffusion at a micro-level. 
-It has been demonstrated that any retweeted tweet is able to reach an average of 1,000 users no matter how many followers the original tweet has\cite{Kwak:2010TSN}.
+It has been demonstrated that any retweeted tweet is able to reach an average of 1,000 users no matter how many followers the original tweet has\citep{Kwak:2010TSN}.
 Retweet function has given every user the power of spreading information broadly, and individual user has the power to dictate which information is important and should spread by pushing retweet button. 
 In fact a user only retweets a small number of tweets and only small subset of followers actually retweet a tweet because the likelihood of a tweet to be retweeted depends on both network context and tweet content. 
 Apart from network context, a tweet is more likely to be retweeted by users are who are interested in the tweet, therefore, we are not only interested in modeling the tweet by itself but also how the tweet resonates with the individuals who might decide to pass it on, and we put a much stronger emphasis on the content and try to model the user's retweeting decision by deriving high-level content-based topic and opinion features. \\
@@ -175,9 +182,9 @@ Despite such a fact, neither contextual factor has any influence on the content 
 A tweet is evenly visible to the followers who subscribe to it by following its publisher.
 \end{hypothesis}
 The rationale behind this hypothesis is, that the motivation of a user to retweet a tweet is that the user considers only the tweet content that arouse resonation with the user.\\
-Studies have highlighted that Twitter network structure better resembles an information sharing network than a interconnecing social network\cite{Boyd2010,Kwak:2010TSN}. 
+Studies have highlighted that Twitter network structure better resembles an information sharing network than a interconnecing social network\citep{Boyd2010,Kwak:2010TSN}. 
 In the context of Twitter, the “following” relationship is a strong indicator of a phenomenon called “homophily”, which has been observed in many social networks.
-Homophily is a phenomenon that people of social network “are homogeneous with regard to many socio-demographic, behavioral, and intra-personal characteristics”\cite{mcpherson2001birds}.
+Homophily is a phenomenon that people of social network “are homogeneous with regard to many socio-demographic, behavioral, and intra-personal characteristics”\citep{mcpherson2001birds}.
 In other words, homophily implies that a user follows another user because he is interested in what another user talks about in tweets, and another user follows back because he finds they share similar interests. 
 According to the principle of homophily, we put forwards the concept of \textbf{Local Topic Space} that the content generated by users in the local network of a user and his followers concentrate on a few local topics.\\
 If a tweet is published, all followers will receive it in their time-line. We suppose every follower read it and have the chance to retweet it if they find it worth to according to our hypothesis~\ref{hypothesis1}.
@@ -202,9 +209,9 @@ In this section, we firstly proceed with detailed methods of how to establish su
 As stated above, the connection relation between publisher and followers indicates their common interests in a Local Topic Space. 
 However, topics usually are not explicitly expressed by users, the topics of a tweet are latent features and have to be inferred by analyzing its content.
 The distillation of topics from tweet content requires methods that are suitable for short texts with heterogeneous vocabulary. 
-Previous efforts have tried to infer topics by finding key words\cite{Chen:2010STE}, extracting  entities\cite{Abel:2011AUM}, and linking tweets to external knowledge categories\cite{conf/icwsm/MacskassyM11}.
+Previous efforts have tried to infer topics by finding key words\citep{Chen:2010STE}, extracting  entities\citep{Abel:2011AUM}, and linking tweets to external knowledge categories\citep{conf/icwsm/MacskassyM11}.
 However, the sparsity is a main problem for these methods to model the users' interests because even users have common local topics they still might refer to a topic with different expressing way.
-Recent works show that topic models such as \textbf{Latent Dirichlet Allocation (LDA)} model and its extensions\cite{blei2003latent,conf/wsdm/WengLJH10} have been efficient ways to characterize latent topics of large volum corpus. 
+Recent works show that topic models such as \textbf{Latent Dirichlet Allocation (LDA)} model and its extensions\citep{blei2003latent,conf/wsdm/WengLJH10} have been efficient ways to characterize latent topics of large volum corpus. 
 Topics of topic models are broader in concept than individual word, since a single topic consists of the whole collection of related words. 
 Thus, the latent topics are more suitable to understand the common topics of interest among different users who use various words to describe the same topic.
 Therefore we use LDA model to find latent topics that are talked about between publisher and followers to construct their Local Topic Space. \\
@@ -233,7 +240,7 @@ The generative process works as follows:
 \end{itemize*}
 \end{itemize*}
 The parameters $ \theta_{u} $ and each $ \beta_{k} $ can be estimated by Gibbs sampling or variational inference.
-We use variational inference-based topic model package Gensim\cite{rehurek_lrec}.
+We use variational inference-based topic model package Gensim\citep{rehurek_lrec}.
 \subsubsection{Sentiment Analysis of Tweets}
 \label{sentiment}
 The tweets that users have published are encoded with their opinions towards topics of interest. 
@@ -243,8 +250,8 @@ The freely expressing opinions of Twitter has made it target of sentiment analys
 But particular language characteristics of short length and informal expressions pose challenges to traditional sentiment analysis techniques.
 The main sentiment analysis techniques could be categorized into machine learning based approaches and rule based approaches.
 Machine learning based approaches often need labelled data for the training process, which is often impossible for Twitter because of the large volume and dynamic language characteristics. 
-Rule based approaches could adapt to Twitter with good flexibility by changing the particular characteristics into rules, which is proved more robust and efficient\cite{Thelwall:2010SSS,Hu:2013www}.\\
-In our work, we use the rule based package SentiStrength\cite{Thelwall:2010SSS}. 
+Rule based approaches could adapt to Twitter with good flexibility by changing the particular characteristics into rules, which is proved more robust and efficient\citep{Thelwall:2010SSS,Hu:2013www}.\\
+In our work, we use the rule based package SentiStrength\citep{Thelwall:2010SSS}. 
 SentiStrength has been built especially to cope with sentiment analysis in short informal text of social media. 
 It combines lexicon-based approaches with sophisticated linguistic rules adapted to social media, which is more suitable for analyzing sentiment of tweets than other approaches in our research settings.
 SentiStrength assigns two values to each tweet standing for sentiment strengths: a measure of positive and a measure of negative sentiment, both on absolute integer scales ranging from 1 to 5, with 1 denoting neutral sentiment and 5 denoting highest sentiment strength.
@@ -337,7 +344,7 @@ Sim\left( p,f_{i} \right) = \lambda \ast Dist\left( p\left( z_{p} \vert \theta_{
 \label{experiment}
 In this section, we systematically investigate how subjective model is built and its influence on retweet behavior on an off-the-shelf dataset.
 \subsection{Dataset}
-We adopt an off-the-shelf Twitter dataset\cite{Luo:2013RMF}.
+We adopt an off-the-shelf Twitter dataset\citep{Luo:2013RMF}.
 For the dataset, 500 randomly selected English tweets which had been retweeted at least once were used as test tweets, then each test tweet was chosen as starting point to collect data of its publisher and followers.
 Summary statistics of the dataset are listed in Table~\ref{datasetstat}.
 \begin{table}
@@ -371,7 +378,7 @@ As an example, we present subjective models for one of the 500 test tweet, its p
 \begin{figure}[htb]
 %\setlength{\belowcaptionskip}{-0.2cm} 
 \centering%,bb=0 0 1280 960
-\includegraphics[width=6.0in,height=3.8in]{tweets10.pdf}
+\includegraphics[width=5.0in,height=3.8in]{tweets10.pdf}
 %\vspace{-4em}
 \caption{Subjective model examples.}
 \label{fig:graph4}
@@ -418,8 +425,8 @@ Figure~\ref{fig:graph6} shows the comparing result.
 \end{figure}
 As the figure demonstrated, on average, the similarities scores of retweeted followers are clearly higher than unretweeted followers for all six factors, which proves that our assumption is reasonable. Specifically,
 \begin{itemize*}
-\item TTF score shows that a tweet is more likely to be retweeted by followers who find topics it talks about interesting to them, which is consistent with other studies\cite{conf/icwsm/MacskassyM11, conf/wsdm/FengW13};
-\item OTF score shows that opinions in a tweet is an important indicator to be rewteeted by by followers who hold similar opinions, although other studies\cite{conf/icwsm/PfitznerGS12,2011:NaveedGKC} have shown that sentiment in tweet have impact on rewteet, most of them don't consider the opinions of followers and the opinion similarity betweet tweet and its followers;
+\item TTF score shows that a tweet is more likely to be retweeted by followers who find topics it talks about interesting to them, which is consistent with other studies\citep{conf/icwsm/MacskassyM11, conf/wsdm/FengW13};
+\item OTF score shows that opinions in a tweet is an important indicator to be rewteeted by by followers who hold similar opinions, although other studies\citep{conf/icwsm/PfitznerGS12,2011:NaveedGKC} have shown that sentiment in tweet have impact on rewteet, most of them don't consider the opinions of followers and the opinion similarity betweet tweet and its followers;
 \item STF score shows the subjective model we put forward is the most distinguishable feature among the six factors with the largest difference between retweeted and unrewteeted followers, which proves the importance of subjectivity;
 \item TPF score gives another perspective for retweet from the topic similarity between tweet publisher and followers, indicating that followers are more likely to retweet those whose interests are similar, which verifies the homophily principle of rewteet relation;
 \item OPF score indicates that similar opinions for common topics of interest also influence followers' decision of retweeting anothor user, which may be another proof of homophily of rewteet relation.
@@ -441,10 +448,10 @@ The other 40,317 users who do not retweet any test tweet are also extracted to f
 For the consideration of balance between positive and negative instances, we randomly sample 5,214 negative instances into the final dataset.
 \subsubsection{Comparison With Other User Models}
 \label{comparison}
-Firstly the comparison between our model with other user models (TF-IDF model\cite{Luo:2013RMF}, entity-based model and hashtag-based model\cite{Abel:2011AUM}) in predicting retweet are investigated.
+Firstly the comparison between our model with other user models (TF-IDF model\citep{Luo:2013RMF}, entity-based model and hashtag-based model\citep{Abel:2011AUM}) in predicting retweet are investigated.
 As for our model, the six parts defined above are used for comparison because they model different factors that influence retweet.
 For the comparing models, cosine similarities are calculated between tweets and their followers.
-We use the logistic regression classifier of Scikit-learn machine learning package\cite{scikit-learn} for training, with 5-fold cross-validation on our balance dataset.
+We use the logistic regression classifier of Scikit-learn machine learning package\citep{scikit-learn} for training, with 5-fold cross-validation on our balance dataset.
 And accuracy measurement is used for evaluation.
 Figure~\ref{fig:graph7} shows the results of our model and all other models.
 \begin{figure}[htb]
@@ -464,8 +471,8 @@ Figure~\ref{fig:graph7} also shows that the influence of topic number of LDA on 
 \subsubsection{Retweet Classification Evaluation}
 \label{classifiction}
 In this section, we feed the six parts of our model as features into a retweet classification framework to verify the effectiveness of the subjective model. 
-We compare the performance of our model with a prediction model of Luo et al.\cite{Luo:2013RMF} which use four feature families: Retweet History, Follower Status, Follower Active Time and Follower Interests. 
-We use LinearSVM of Scikit-learn package to build a retweet prediction model, leveraging two different features sets, one includes the six features derived from subjective model(marked as ``SM6''), and the other is Luo et al.\cite{Luo:2013RMF}(marked as ``LUO'') feature set in which they use ``bag-of-words'' to model the followers interest.  
+We compare the performance of our model with a prediction model of Luo et al.\citep{Luo:2013RMF} which use four feature families: Retweet History, Follower Status, Follower Active Time and Follower Interests. 
+We use LinearSVM of Scikit-learn package to build a retweet prediction model, leveraging two different features sets, one includes the six features derived from subjective model(marked as ``SM6''), and the other is Luo et al.\citep{Luo:2013RMF}(marked as ``LUO'') feature set in which they use ``bag-of-words'' to model the followers interest.  
 We use the same dataset as Section~\ref{comparison} with 5-fold cross-validation, and accuracy as measurement.
 In addition, we set a baseline(marked as ``RB'') for evaluation, in which followers who have retweeted the publisher's previous tweets before are predicted as retweeters for current tweet. 
 The result is listed in Table~\ref{table2}.
@@ -504,6 +511,6 @@ We demonstrate the effectiveness of the proposed model with retweet analysis pro
 Our future work mainly lies in two directions.
 Firstly, our subjective model is established in a simple way, and it is an interesting direction to establish it under the framework of generative topic-sentiment model, which has been applied in reviews and citation network.
 Secondly, we will apply subjective model to other social media analysis task such as connection prediction and friend recommendation.
-\bibliographystyle{elsarticle-num-names}
+\bibliographystyle{model5-names}
 \bibliography{resonate_tweet}
 \end{document}
